// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShoppingListTab component should render a group with an item 1`] = `
<ScrollView
  style={
    Array [
      Object {
        "backgroundColor": "#EBEDEF",
        "flex": 1,
      },
      Object {
        "width": 320,
      },
    ]
  }
>
  <SectionList
    ListEmptyComponent={[Function]}
    ListFooterComponent={[Function]}
    ListHeaderComponent={[Function]}
    SectionSeparatorComponent={[Function]}
    extraData={Object {}}
    keyExtractor={[Function]}
    renderItem={[Function]}
    renderSectionHeader={[Function]}
    sections={
      Array [
        Object {
          "data": Array [],
          "sectionIndex": 0,
          "shoppingList": Object {
            "name": "Test",
            "projectId": 1,
            "projectShoppingListGroupId": 1,
            "shoppingListSessionCartItems": Array [
              Object {
                "name": "test",
                "quantityPurchased": 1,
                "quantityUnpurchased": 1,
              },
            ],
          },
        },
      ]
    }
  />
  <KeyboardSpacer />
</ScrollView>
`;

exports[`ShoppingListTab component should render a group without any item 1`] = `
<ScrollView
  style={
    Array [
      Object {
        "backgroundColor": "#EBEDEF",
        "flex": 1,
      },
      Object {
        "width": 320,
      },
    ]
  }
>
  <SectionList
    ListEmptyComponent={[Function]}
    ListFooterComponent={[Function]}
    ListHeaderComponent={[Function]}
    SectionSeparatorComponent={[Function]}
    extraData={Object {}}
    keyExtractor={[Function]}
    renderItem={[Function]}
    renderSectionHeader={[Function]}
    sections={
      Array [
        Object {
          "data": Array [],
          "sectionIndex": 0,
          "shoppingList": Object {
            "name": "Test",
            "projectId": 1,
            "shoppingListSessionCartItems": Array [],
          },
        },
      ]
    }
  />
  <KeyboardSpacer />
</ScrollView>
`;

exports[`ShoppingListTab component should render with no groups 1`] = `
<ScrollView
  style={
    Array [
      Object {
        "backgroundColor": "#EBEDEF",
        "flex": 1,
      },
      Object {
        "width": 320,
      },
    ]
  }
>
  <View>
    <Button
      accessibilityLabel="Add a Group"
      color="white"
      onPress={[Function]}
      style={
        Object {
          "alignItems": "flex-start",
          "margin": 8,
        }
      }
      trackAction={undefined}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
          }
        }
      >
        <Round
          backgroundColor="#00A499"
          diameter={16}
          style={
            Object {
              "marginRight": 8,
            }
          }
        >
          <Icon
            color="#FFFFFF"
            name="ios-medical"
            size={11}
          />
        </Round>
        <Text
          weight="bold"
        >
          Add a Group 
        </Text>
        <Text
          style={
            Object {
              "flexGrow": 1,
            }
          }
        >
          (Kitchen, Lighting, etc.)
        </Text>
      </View>
    </Button>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#CCEEEC",
          "borderColor": "#D0D3D4",
          "borderWidth": 1,
          "marginHorizontal": 8,
          "padding": 16,
        }
      }
    >
      <Icon
        color="#00A499"
        name={undefined}
        size={30}
      />
      <Text
        weight="bold"
      >
        Add Products
      </Text>
      <Text
        family="archer"
        size="large"
      >
        Shared Shopping List
      </Text>
      <View
        style={
          Object {
            "borderBottomColor": "#00A499",
            "borderBottomWidth": 1,
            "marginVertical": 8,
            "width": 60,
          }
        }
      />
      <Text
        textAlign="center"
      >
        Find the products you'd like to add by searching for it's name or SKU#. Tap 
        <Text
          weight="bold"
        >
          Add to Project
        </Text>
         from any product page. Use the quick links below to begin!
      </Text>
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "marginTop": 16,
            }
          }
        >
          <Button
            accessibilityLabel="Bathroom"
            onPress={[Function]}
            style={
              Object {
                "marginBottom": 8,
              }
            }
            text="Bathroom"
            trackAction={undefined}
            trackContextData={
              Object {
                "categoryId": 108412,
                "categoryName": "Bathroom",
              }
            }
          />
          <Button
            accessibilityLabel="Kitchen"
            onPress={[Function]}
            style={
              Object {
                "marginBottom": 8,
              }
            }
            text="Kitchen"
            trackAction={undefined}
            trackContextData={
              Object {
                "categoryId": 108413,
                "categoryName": "Kitchen",
              }
            }
          />
          <Button
            accessibilityLabel="Hardware"
            onPress={[Function]}
            style={
              Object {
                "marginBottom": 8,
              }
            }
            text="Hardware"
            trackAction={undefined}
            trackContextData={
              Object {
                "categoryId": 108415,
                "categoryName": "Hardware",
              }
            }
          />
          <Button
            accessibilityLabel="Shop More"
            onPress={[Function]}
            text="Shop More"
            trackAction={undefined}
          />
        </View>
      </View>
    </View>
  </View>
  <KeyboardSpacer />
</ScrollView>
`;

exports[`ShoppingListTab function tests renderAddGroup 1`] = `
<Button
  accessibilityLabel="Add a Group"
  color="white"
  onPress={[Function]}
  style={
    Object {
      "alignItems": "flex-start",
      "margin": 8,
    }
  }
  trackAction={undefined}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexShrink": 1,
      }
    }
  >
    <Round
      backgroundColor="#00A499"
      diameter={16}
      style={
        Object {
          "marginRight": 8,
        }
      }
    >
      <Icon
        color="#FFFFFF"
        name="ios-medical"
        size={11}
      />
    </Round>
    <Text
      weight="bold"
    >
      Add a Group 
    </Text>
    <Text
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      (Kitchen, Lighting, etc.)
    </Text>
  </View>
</Button>
`;

exports[`ShoppingListTab function tests renderShoppingListFooter 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "paddingHorizontal": 8,
      "paddingVertical": 16,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "flex-end",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 16,
      }
    }
  >
    <Text
      weight="bold"
    >
      Estimated Total
    </Text>
    <Text
      color="primary"
      size="large"
      weight="bold"
    />
  </View>
  <AddToCartButton
    disableBorder={true}
    disabled={false}
    isEnabled={true}
    itemAdded={false}
    onPress={[Function]}
    showBouncingDots={false}
    style={undefined}
    text="Add All To Cart"
  />
</View>
`;

exports[`ShoppingListTab function tests setScreenTrackingInformation 1`] = `
Object {
  "name": "build:app:projects:details:shoppinglist",
}
`;
